*** empty log message ***

--- a/samples/fddi/ChangeLog
+++ b/samples/fddi/ChangeLog
@@ -190,4 +190,7 @@ FDDI78.arj (--VA)
 FDDI79.arj (--VA)
 - simulation.error() calls corrected to error()
 
+FDDI80.arj (--VA)
+- ?
+
 ---CVS begin---
