--- a/doc/README
+++ b/doc/README
@@ -1,16 +1,17 @@
 What is OMNeT++?
 ~~~~~~~~~~~~~~~~
-(last updated: Feb 7, 1999)
+(last updated: June 7, 1999)
 
 OMNeT++ is an object-oriented modular discrete event simulator.
 An OMNeT++ model consists of hierarchically nested modules which
 communicate though gates and connections. The user defines the
-module structure in a special language (called NED).
+module structure in the NED language.
 
-The modules on the lowest level (called simple modules) contain
+The modules on the lowest level (termed "simple modules") contain
 the algorithms. Those are written in C++ and use the simulation
-object library. The simple modules execute as different processes,
-quasi in parallel (they are implemented as coroutines).
+object library. Simple modules appear to execute as something like
+threads within a simulation. (In fact they use non-preemptive
+scheduling; they are implemented as coroutines).
 
 OMNeT++ is written in C++ and it is portable: it runs on any platform
 where there's a C++ compiler. It has a Tcl/Tk user interface which is
@@ -19,8 +20,8 @@ independent command-line user interface for batch execution.
 There is also a text-mode windowing user interface (Turbo Vision).
 
 OMNeT++ has a graphical topology editor called GNED and also a tool
-called Plove for analyzing and plotting simulation output. Plove is
-written in pure Tcl/Tk.
+called Plove for analyzing and plotting simulation output. Both tools
+are written with Tcl/Tk.
 
 We have extended OMNeT++ to execute in parallel using the popular
 PVM library (Parallel Virtual Machine), for studying different
