--- a/src/cmdenv/ChangeLog
+++ b/src/cmdenv/ChangeLog
@@ -87,5 +87,9 @@
   - updated for sim172d
 #105 Feb 7, 1999
   - small fixes
+#106 June 21, 1999
+  - all sources checked in under CVS
+  - makefile.in modified for use with GNU Autoconf; also renamed to Makefile.in
+  - version.log renamed to ChangeLog
+  - removed support for DOS with BC3.1
 
---- CVS begin ---
