--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -585,5 +585,9 @@
  - some cleanup
 #174 Feb 7, 1999
  - stable version
+#175 June 21, 1999
+  - all sources checked in under CVS
+  - makefile.in modified for use with GNU Autoconf; also renamed to Makefile.in
+  - version.log renamed to ChangeLog
+  - removed support for DOS with BC3.1
 
---- CVS begin ---
