--- a/src/gned/TODO
+++ b/src/gned/TODO
@@ -10,8 +10,7 @@ Parse/Generate:
 
 Data struct change:
 - "source-text" attribute to module?? should be added when one switches to text mode
-- nedfile: name/filename is not good! maybe filename/filenamevalid?
-- nedfile: add "dirty" attribute?
+- add something like ddesc(*,user-may-reorder-children)??
 - turn display strings into independent objects?
 
 Drawing:
@@ -22,7 +21,7 @@ Drawing:
 
 Load/save:
 - fileClose does not work
-- save: for canvases switched to text, it should save the text version
+- save: for canvases switched to text, it should save the text version (not good!)
 - load: if there's a parse error, load the whole stuff into a "scratch" text-mode canvas?
 
 Text editor:
@@ -31,6 +30,7 @@ Text editor:
 - make status line: line number etc.
 
 General:
+- switching back from text to graphics should check if text really changed or not
 - display string: numeric parameters must be checked!!!
 - cut,copy,paste should work everywhere (menu,toolbar,keys),
   for both text and graphics
@@ -39,7 +39,6 @@ General:
 
 Manager:
 - local menu on components: Close canvas, Properties
-- reordering items (move up/down)
 
 Dialogs:
 - TBD
