--- a/src/gned/TODO
+++ b/src/gned/TODO
@@ -20,7 +20,7 @@ Drawing:
 - paste does not work between canvases
 
 Load/save:
-- fileClose does not work
+- fileClose very slow
 - save: for canvases switched to text, it should save the text version (not good!)
 - load: if there's a parse error, load the whole stuff into a "scratch" text-mode canvas?
 
