--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -219,3 +219,4 @@ June 30, 1999
   - ebnf.y ported back from GNED -- has been modified since: most be copied back!
   - added nedc.ide and b.bat
   - DOES NOT WORK YET! TEST9.NED FAILS TO COMPILE!
+  - in jar_mod.c, replace "gate_mod_" with "mod_"!
