--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -220,3 +220,4 @@ June 30, 1999
   - added nedc.ide and b.bat
   - DOES NOT WORK YET! TEST9.NED FAILS TO COMPILE!
   - in jar_mod.c, replace "gate_mod_" with "mod_"!
+KAKA VAN BENNE!!!!!
