*** empty log message ***

--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -594,3 +594,4 @@ Jul 10, 1999
   - fixed bug in cQueue and cLinkedList (didn't always increment item count
     on insertion)
   - fixed bug in cPar::info(): didn't handle boolean (B) type
+  KNOWN BUGS: cModule::initialize() doesn't get called with dynamic modules
