slash/backslash option for windows gnuplots

--- a/src/plove-old/ChangeLog
+++ b/src/plove-old/ChangeLog
@@ -43,6 +43,8 @@
   - all sources checked in under CVS
   - added a small, almost dummy Makefile.in
   - version.log renamed to ChangeLog
+July 17, 1999
+  - added slash/backslash option for gnuplot on Windows
 
 
 
