help text changed

--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -221,3 +221,5 @@ June 30, 1999
   - doesn't work yet!
 July 10, 1999
   - ebnf.y fixed, nedc works fine again.
+July 17, 1999
+  - help text changed
