*** empty log message ***

--- a/doc/README
+++ b/doc/README
@@ -140,7 +140,7 @@ Initial revision of PVM support (as final project), spring 1996:
         Zoltan Vass             BME-HIT
 
 The author acknowledges the help of several people:
-Richard Lyon, Joel Sherill
+Richard Lyon, Joel Sherill,...
 
 
 Feedback requested
