--- a/doc/TODO
+++ b/doc/TODO
@@ -1,5 +1,11 @@
-TO DO:
+To Do until final release:
+~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+finish bugfixes...
+
+
+Further plans...
+~~~~~~~~~~~~~~~~
 (things that just came to my mind, in no particular order)
 
 Aug 25, 1998, somewhat updated June 5, 1999
